--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,24 +11,23 @@ body {
     background-color: #f9f4ef;
     padding: 0;
 }
-
 .sidebar-logo {
     padding: 40px 20px;
 }
-
 .sidebar-logo img {
     max-width: 100%;
-    height: auto;
     margin-bottom: 40px;
 }
-
-.sidebar .nav {
+.sidebar .navbar-nav {
     padding: 0;
     text-align: right;
 }
-
-.sidebar .nav li {
+.sidebar .navbar-nav li {
     padding: 15px 0;
+}
+
+.navbar-nav {
+    padding: 0 !important;
 }
 
 .nav-link {
@@ -39,24 +38,21 @@ body {
     text-decoration: none;
     transition: background-color 0.3s;
 }
-
 .nav-link.active,
 .nav-link:hover {
     background-color: #d48b63;
     color: #fff;
 }
 
-/* Content area styling */
+/* Main content styling */
 main {
     padding: 40px 20px;
     background-color: #fff;
 }
-
 main h1 {
     font-size: 2rem;
     margin-bottom: 20px;
 }
-
 main p {
     font-size: 1.2rem;
     line-height: 1.6;
@@ -68,20 +64,15 @@ main p {
     padding: 20px 0;
     text-align: center;
 }
-
 .image-container {
     position: relative;
     margin-bottom: 30px;
 }
-
 .image-container img {
     max-width: 100%;
-    height: auto;
-    border-radius: 15px;
+    border-radius: 15px !important;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 0 !important;
 }
-
 .image-backdrop {
     position: absolute;
     top: 0;
@@ -92,13 +83,12 @@ main p {
     display: flex;
     justify-content: start;
     align-items: center;
-    border-radius: 15px !important;
+    border-radius: 15px;
+    padding: 20px 30px;
 }
-
 .image-backdrop h2 {
     color: #fff;
     font-size: 1.75rem;
-    padding: 20px 30px;
     text-align: right;
 }
 
@@ -107,26 +97,22 @@ main p {
     background-color: #fff;
     padding: 20px 0;
 }
-
 .vision-mission-section h3 {
     font-size: 1.5rem;
     color: #333;
     margin-bottom: 10px;
 }
-
 .vision-mission-section p {
     font-size: 1.1rem;
     line-height: 1.6;
     color: #555;
 }
-
 .icon-holder {
     padding: 20px;
-    width: fit-content;
-    border-radius: 20px;
     background: #f2e8da;
+    border-radius: 20px;
+    width: fit-content;
 }
-
 .vision-mission-section i {
     color: #d48b63 !important;
 }
@@ -137,51 +123,41 @@ main p {
     padding: 20px 0;
     margin: 0 -24px;
 }
-
 .testimonial-section h2 {
     font-size: 1.75rem;
     color: #333;
 }
-
 .testimonial-card {
     border: 1px solid #d48b63;
     border-radius: 15px;
     background-color: #fcfaf7;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
-
 .testimonial-card p {
     font-size: 1.2rem;
-    line-height: 1.6;
     color: #555;
+    line-height: 1.6;
     margin: 0;
 }
 
-
 /* Treatments Section */
 .treatments-section {
-    padding: 20px 0px;
+    padding: 20px 0;
     background-color: #fff;
 }
-
 .treatments-section h2 {
     font-size: 1.75rem;
     color: #333;
     margin-bottom: 20px;
 }
-
 .image-container {
     position: relative;
 }
-
 .image-container img {
     width: 100%;
-    height: auto;
-    border-radius: 15px !important;
+    border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
-/* Overlay content */
 .overlay-content {
     position: absolute;
     bottom: 0;
@@ -194,26 +170,18 @@ main p {
     justify-content: space-between;
     align-items: center;
 }
-
 .treatment-icon a {
     background-color: #d48b63;
     color: #fff;
     padding: 10px;
-    display: inline-block;
     font-size: 1.5rem;
     border-radius: 50%;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s;
     width: 60px;
 }
-
 .treatment-icon a:hover {
     background-color: #c37950;
 }
-
-.treatment-icon i {
-    transform: rotate(-45deg);
-}
-
 .treatment-text p {
     font-size: 1.2rem;
     color: #333;
@@ -224,22 +192,19 @@ main p {
 /* Why Us Section */
 .why-us-section {
     background-color: #fff;
-    padding: 20px 0px;
+    padding: 20px 0;
 }
-
 .why-us-section h2 {
     font-size: 1.75rem;
     color: #333;
     margin-bottom: 20px;
 }
-
 .service-card {
     background-color: #f2e8da;
     border-radius: 15px;
     text-align: center;
     padding: 20px;
 }
-
 .service-card .icon-holder {
     background: #e3a879;
     margin: 0 auto;
@@ -248,18 +213,13 @@ main p {
     height: 100px;
     width: 100px;
 }
-
-/* Font Awesome Icons */
 .service-icon {
     font-size: 3rem;
     color: #f2e8da;
-    margin-bottom: 0 !important;
 }
-
 .service-text {
     font-size: 1rem;
     color: #333;
-    margin-bottom: 0;
 }
 
 /* Gallery Section */
@@ -267,58 +227,47 @@ main p {
     background-color: #fff;
     padding: 20px 0;
 }
-
 .gallery-section h2 {
     font-size: 1.75rem;
     color: #333;
     margin-bottom: 20px;
 }
-
-/* Image container styling */
 .gallery-section .image-container {
     position: relative;
 }
-
 .gallery-section .image-container img {
     width: 100%;
-    height: auto;
     border-radius: 15px;
 }
-
-/* Button inside image */
 .gallery-section .btn-icon {
     background-color: #d48b63;
     color: #fff;
     padding: 10px;
-    display: inline-block;
     font-size: 1.5rem;
     border-radius: 50%;
-    transition: background-color 0.3s ease;
-    width: 58px;
+    transition: background-color 0.3s;
+    width: 60px;
 }
-
 .gallery-section .btn-icon i {
     transform: rotate(-45deg);
 }
 
+/* Team Section */
 .team-section {
     background-color: #fff;
-    padding: 20px 0px;
+    padding: 20px 0;
 }
-
 .team-section h2 {
     font-size: 2rem;
-    color: #000 !important;
+    color: #000;
     text-align: right;
 }
-
 .team-section h3 {
     font-size: 1.5rem;
     font-weight: 600;
     color: #333 !important;
     text-align: right;
 }
-
 .team-section p {
     font-size: 1.1rem;
     line-height: 1.6;
@@ -326,10 +275,10 @@ main p {
     text-align: right;
 }
 
-/* Medical Treatment Section */
+/* Medical Treatments Section */
 .medical-treatments-section {
     background-color: #fff;
-    padding: 20px 0px;
+    padding: 20px 0;
 }
 .medical-treatments-section h2 {
     font-size: 2rem;
@@ -337,35 +286,29 @@ main p {
     margin-bottom: 30px;
     text-align: right;
 }
-
 .medical-treatment-card {
-    position: relative;
     background-color: #f9f4ef;
     border-radius: 15px;
-    overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
 }
-
 .medical-treatment-card img {
     width: 100%;
-    height: auto;
     border-radius: 15px 15px 0 0;
 }
-
 .medical-treatment-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
     background-color: #f9f4ef;
+    padding: 15px;
     border-radius: 0 0 15px 15px;
 }
-
 .medical-treatment-name {
     font-size: 1.2rem;
     color: #5a5a5a;
 }
-
 .btn-medical-icon {
     background-color: #d48b63;
     color: #fff;
@@ -375,89 +318,76 @@ main p {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    transition: background-color 0.3s;
 }
-
 .btn-medical-icon:hover {
     background-color: #bf7148;
 }
-
 .btn-medical-icon i {
     font-size: 1.2rem;
-    transform: rotate(-45deg);
 }
 
-/* Responsive styling */
-@media (max-width: 768px) {
-    .sidebar {
-        padding: 0 10px;
-    }
+.collapse:not(.show) {
+    display: block !important;
+}
 
+.navbar-toggler {
+    display: none;
+}
+
+#side-menu {
+    text-align: right;
+}
+
+#side-menu .close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    font-size: 25px;
+    line-height: normal;
+}
+
+
+
+/* Responsive Styling */
+@media (max-width: 768px) {
     .nav-link {
         font-size: 16px;
     }
-
     main {
         padding: 20px;
     }
-
     .about-section h2,
     .testimonial-section h2,
     .vision-mission-section h3 {
         font-size: 1.5rem;
     }
-
     .about-section p,
     .testimonial-card p,
     .vision-mission-section p {
         font-size: 1rem;
     }
-
     .vision-mission-section i {
         font-size: 2.5rem;
     }
-
-    .treatments-section h2 {
-        font-size: 1.5rem;
-    }
-
-    .treatment-text p {
-        font-size: 1rem;
-    }
-
-    .service-icon {
-        font-size: 2.5rem;
-    }
-
-    .service-text {
-        font-size: 0.9rem;
-    }
-
-    .btn-icon {
-        font-size: 1.2rem;
-        padding: 8px;
-    }
-
-    .gallery-section h2 {
-        font-size: 1.5rem;
-    }
-
-    .team-section h2 {
-        font-size: 1.75rem;
-    }
-
-    .team-section h3 {
-        font-size: 1.25rem;
-    }
-
-    .team-section p {
-        font-size: 1rem;
-    }
-
     .medical-treatment-card {
         margin-bottom: 20px;
     }
+}
 
-    .medical-treatments-section h2 {
-        font-size: 1.75rem;
+@media (max-width: 500px) {
+    .collapse:not(.show), .navbar-collapse {
+        display: none !important;
+    }
+    .navbar-toggler {
+        display: block;
+        margin-left: 30px;
     }
 }
