fix width problem in landing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,7 +368,7 @@ nav.menu {
     position: relative;
     text-align: center;
     overflow: hidden;
-    width: 1250px;
+    width: 70vw;
 }
 
 .banner-holder {
