--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,6 +418,68 @@ textarea.form-control {
     border-radius: 100%;
 }
 
+.successSwiper {
+    padding: 0 40px;
+}
+
+.successSwiper .swiper-slide {
+    width: 200px;
+    height: 400px;
+    transition: all 0.4s ease;
+    filter: grayscale(100%);
+    border-radius: 30px;
+    overflow: hidden;
+}
+
+.successSwiper .swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.successSwiper .swiper-slide.swiper-slide-active {
+    width: 430px !important;
+    filter: none;
+}
+
+.verticalSwiper {
+  height: 800px;
+  width:100%;
+  margin: auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.verticalSwiper .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease;
+  opacity: 0.5;
+  z-index: 9;
+}
+
+.verticalSwiper .swiper-slide-active {
+  opacity: 1;
+  z-index: 99;
+}
+
+.verticalSwiper .swiper-slide .container {
+    background-color: #fff !important;
+}
+
+.swiper-scrollbar {
+  width: 6px;
+  background: #f1f1f1;
+  border-radius: 10px;
+  right: 13% !important;
+}
+
+.swiper-scrollbar-drag {
+  background: #fbbf24; /* yellow color */
+  border-radius: 10px;
+}
+
 @media (max-width: 767.98px) {
     .hero-box {
         min-height: 235px;
