--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,67 +416,42 @@ textarea.form-control {
     border-radius: 100%;
 }
 
-.successSwiper {
-    padding: 0 40px;
+.swiper-container {
+    position: relative;
+    height: 700px;
+    direction: ltr;
 }
 
-.successSwiper .swiper-slide {
-    width: 200px;
-    height: 400px;
-    transition: all 0.4s ease;
+.swiper-wrapper {
+    display: flex;
+    align-items: stretch;
+}
+
+.swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #eee;
+    transition: all 200ms linear;
+    transform: scale(0.9);
     filter: grayscale(100%);
-    border-radius: 30px;
+    border-radius: 24px;
     overflow: hidden;
+    flex: 0 0 auto;
+    min-width: 150px;
 }
 
-.successSwiper .swiper-slide img {
+.swiper-slide.swiper-slide-active {
+    filter: grayscale(0%);
+    transform: scale(1);
+    z-index: 2;
+    flex-grow: 2;
+}
+
+.swiper-slide img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.successSwiper .swiper-slide.swiper-slide-active {
-    width: 430px !important;
-    filter: none;
-}
-
-.verticalSwiper {
-    height: 800px;
-    width: 100%;
-    margin: auto;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.verticalSwiper .swiper-slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-    opacity: 0.5;
-    z-index: 9;
-}
-
-.verticalSwiper .swiper-slide-active {
-    opacity: 1;
-    z-index: 99;
-}
-
-.verticalSwiper .swiper-slide .container {
-    background-color: #fff !important;
-}
-
-.swiper-scrollbar {
-    width: 6px;
-    background: #f1f1f1;
-    border-radius: 10px;
-    right: 13% !important;
-}
-
-.swiper-scrollbar-drag {
-    background: #fbbf24;
-    /* yellow color */
-    border-radius: 10px;
 }
 
 .stack-cards {
@@ -568,7 +543,11 @@ textarea.form-control {
         width: 100%;
     }
 
-    .stack-cards__item { 
+    .stack-cards__item {
         height: 600px;
+    }
+
+    .swiper-container {
+        height: auto;
     }
 }
