--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,43 +416,96 @@ textarea.form-control {
     border-radius: 100%;
 }
 
-.swiper-container {
-    position: relative;
-    height: 700px;
+.slick-slider.blog-carousel.slider-brand {
+    margin: auto;
     direction: ltr;
 }
 
-.swiper-wrapper {
-    display: flex;
-    align-items: stretch;
+.slick-slider.blog-carousel.slider-brand .slick-list {
+    overflow: visible;
 }
 
-.swiper-slide {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #eee;
-    transition: all 200ms linear;
-    transform: scale(0.9);
+.slick-slider.blog-carousel.slider-brand .slick-slide {
+    width: calc(156px + 1rem);
+    transition: transform 0.5s ease, opacity 0.5s ease, filter 0.5s ease;
+  will-change: transform, opacity;
+    opacity: 0.4;
+    transform: scale(0.93);
     filter: grayscale(100%);
-    border-radius: 24px;
+    cursor: pointer;
+}
+
+.slick-slider.blog-carousel.slider-brand .slick-slide img {
+    width: auto;
+    height: 600px;
+    border-radius: 25px;
+}
+
+.slick-slider.blog-carousel.slider-brand .slick-slide .blog-post-box-inner {
     overflow: hidden;
-    flex: 0 0 auto;
-    min-width: 150px;
+    padding: 0 0.5rem;
+    border-radius: 25px;
 }
 
-.swiper-slide.swiper-slide-active {
-    filter: grayscale(0%);
+.slick-slider.blog-carousel.slider-brand .slick-slide .blog-post-box-title,
+.slick-slider.blog-carousel.slider-brand .slick-slide .blog-post-image.secondary {
+    height: 45px;
+    justify-content: center;
+    margin: 3rem auto;
+    max-width: 38rem;
+}
+
+.slick-slider.blog-carousel.slider-brand .slick-slide .blog-post-excerpt-wrapper {
+    text-align: center;
+    padding: 0 1.5rem;
+    width: calc(100% + 10rem);
+    margin-left: -5rem;
+}
+
+.slick-slider.blog-carousel.slider-brand .slick-slide:not(.slick-center) .blog-post-excerpt-wrapper {
+    display: none;
+}
+
+.slick-slider.blog-carousel.slider-brand .slick-slide.slick-center {
+    margin: 0;
+    padding: 0;
+    width: 33vw;
     transform: scale(1);
+    opacity: 1;
+    filter: grayscale(0%);
     z-index: 2;
-    flex-grow: 2;
 }
 
-.swiper-slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.slick-slider .slick-arrow {
+    background:
+        linear-gradient(45deg, black 25%, transparent 25%, transparent),
+        linear-gradient(-45deg, black 25%, transparent 25%, transparent),
+        linear-gradient(45deg, transparent 75%, black 75%),
+        linear-gradient(-45deg, transparent 75%, black 75%);
+    background-position: 20px 0;
+    background-size: 40px 35px;
+    top: calc(100% - 12rem);
+    border: none;
+    font-size: 0;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    z-index: 1;
+    width: 40px;
+    height: 18px;
+    display: none !important;
 }
+
+.slick-slider .slick-arrow.slick-next {
+    transform: rotate(-90deg);
+    right: calc(25vw + 1rem);
+}
+
+.slick-slider .slick-arrow.slick-prev {
+    transform: rotate(90deg);
+    left: calc(25vw + 1rem);
+}
+
 
 .stack-cards {
     --stack-cards-gap: var(--space-sm);
@@ -550,4 +603,11 @@ textarea.form-control {
     .swiper-container {
         height: auto;
     }
+
+    .slick-slider.blog-carousel.slider-brand .slick-slide {
+        opacity: 1 !important;
+        transform: scale(1) !important;
+        filter: grayscale(0) !important;
+    }
+
 }
